# mocha-gemm-profile

./: .gitignore  .vimrc  README.md  push.sh
clkernel/: gemm-blocking-2x2-vload4.cl  gemm-blocking-4x4-vload4.cl  gemm-noblock-vload8.cl  gemm.cl
lib/openblas-hard/include/: openblas_config.h
lib/openblas-hard/lib/cmake/openblas/: OpenBLASConfig.cmake  OpenBLASConfigVersion.cmake
lib/viennacl-hard/include/viennacl/backend/: mem_handle.hpp
lib/viennacl-hard/include/viennacl/device_specific/builtin_database/: common.hpp
lib/viennacl-hard/include/viennacl/linalg/: matrix_operations.hpp  prod.hpp
lib/viennacl-hard/include/viennacl/linalg/opencl/: matrix_operations.hpp
lib/viennacl-hard/lib/cmake/viennacl/: ViennaCLConfig.cmake  ViennaCLConfigVersion.cmake
mocha-profile/: CMakeLists.txt  build.sh
mocha-profile/include/: cmdoptions.hpp  energy.hpp
mocha-profile/include/caffe/util/: math_functions.hpp  mkl_alternate.hpp
mocha-profile/include/greentea/: greentea.hpp  greentea_math_functions.hpp
mocha-profile/src/: cmdoptions.cpp  gemm-cpu.cpp  gemm-gpu.cpp  gemm-viennacl.cpp  gemm.cpp
mocha-profile/src/caffe/: math_functions.cpp
mocha-profile/src/greentea/: greentea.cpp  greentea_math_functions.cpp
mocha-profile/utils/: cmdparser.cpp  cmdparser.hpp
notebook/: Caffe-Layer-Profiling.ipynb  Conv Profiling.ipynb  GEMM profiling.ipynb  result.global  utils.py
